--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 		<title>FanHua</title>
 		<script type="text/javascript">document.location.href = "https://weibo.com/imfanhua"</script>
 	</head>
-	<body></body>
+	<body>
+		<!-- TODO: 将这个 Github page 改为自己的博客 -->
+	</body>
 </html>
