--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>FanHua</title>
-		<script type="text/javascript">document.location.href = "https://weibo.com/imfanhua"</script>
+		<script type="text/javascript">document.location.href = "https://space.bilibili.com/352711"</script>
 	</head>
 	<body>
 		<!-- TODO: 将这个 Github page 改为自己的博客 -->
